--- a/res/layout/activity_sms_cleaner.xml
+++ b/res/layout/activity_sms_cleaner.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Heading"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SmsCleaner" >
@@ -9,7 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_below="@+id/listHeader" >
+
     </ListView>
+
+    <TextView
+        android:id="@+id/listHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text=""
+        android:textSize="14pt" />
 
 </RelativeLayout>
