--- a/res/menu/activity_sms_cleaner.xml
+++ b/res/menu/activity_sms_cleaner.xml
@@ -5,5 +5,6 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_delete"/>
+    <item android:id="@+id/menu_settings" android:menuCategory="system" android:orderInCategory="200" android:title="@string/menu_settings" android:showAsAction="never"></item>
 
 </menu>
