--- a/res/menu/activity_sms_cleaner.xml
+++ b/res/menu/activity_sms_cleaner.xml
@@ -3,8 +3,9 @@
     <item
         android:id="@+id/menu_delete"
         android:orderInCategory="100"
-        android:showAsAction="never"
+        android:showAsAction="ifRoom"
         android:title="@string/menu_delete"/>
     <item android:id="@+id/menu_settings" android:menuCategory="system" android:orderInCategory="200" android:title="@string/menu_settings" android:showAsAction="never"></item>
+    <item android:id="@+id/menu_refresh" android:orderInCategory="300" android:title="@string/menu_refresh" android:showAsAction="ifRoom"></item>
 
 </menu>
