--- a/res/menu/activity_settings.xml
+++ b/res/menu/activity_settings.xml
@@ -1,3 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:id="@+id/menu_help" android:orderInCategory="100" android:title="@string/regexp_help" android:menuCategory="system"></item>
 
 </menu>
